--- a/resources/css/index_bp.css
+++ b/resources/css/index_bp.css
@@ -485,6 +485,10 @@ template {
   * Example of useage:
   * @include background-opacity(#000, 0.3);
   */
+.ml-10 {
+  margin-left: 10px !important;
+}
+
 /*
 * ------------------------------
 * Title
@@ -535,6 +539,9 @@ template {
   line-height: 18px;
   letter-spacing: -1.05px;
   line-height: 18px;
+}
+.title-box.xsm {
+  margin: 12px 0 6px;
 }
 .title-box.md {
   min-height: unset;
@@ -1008,6 +1015,10 @@ button {
   margin-right: 0px !important;
 }
 
+.pt-0 {
+  padding-top: 0px !important;
+}
+
 .mt-0 {
   margin-top: 0px !important;
 }
@@ -1030,6 +1041,10 @@ button {
 
 .text-center {
   text-align: center !important;
+}
+
+.text-right {
+  text-align: right !important;
 }
 
 .text-center > * {
@@ -1219,7 +1234,7 @@ td .divide + .divide {
   margin-top: 8px;
 }
 .title-box.xsm {
-  margin: 12px 0 6px;
+  margin: 20px 0 6px;
   align-items: flex-end;
 }
 .title-box.xsm .sub-title {
@@ -1409,6 +1424,9 @@ td .divide + .divide {
   padding: 4px 30px 30px;
   background: #fff;
   border: 1px solid #e4e4e4;
+}
+.tab-control.border .tabpanel {
+  padding-top: 20px;
 }
 
 .tab-menu .btn-box {
@@ -1957,12 +1975,44 @@ td .divide + .divide {
   border-top: 1px solid #e5e5e5;
   text-align: right;
 }
+.window-footer .btn-box {
+  margin-top: 0;
+}
 
 /*
 * ------------------------------
 * dialog
 * ------------------------------
 */
+.k-dialog .k-dialog-content.alert {
+  width: 320px;
+  text-align: center;
+}
+.k-dialog .k-dialog-content.alert .content-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 40px 30px 30px;
+}
+.k-dialog .k-dialog-content.alert .btn-box {
+  margin-top: 30px;
+}
+.k-dialog .k-dialog-content.alert .btn-box .k-button {
+  height: 32px;
+}
+.k-dialog .k-dialog-content.alert .main-text {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  line-height: 23px;
+}
+.k-dialog .k-dialog-content.alert .point {
+  color: #0e4194;
+  font-weight: bold;
+}
+.k-dialog .k-dialog-content.xs {
+  width: 320px;
+}
 .k-dialog .k-dialog-content.sm {
   width: 480px;
 }
@@ -1985,6 +2035,11 @@ td .divide + .divide {
   -webkit-tap-highlight-color: transparent;
   border: 1px solid #555;
   overflow: hidden;
+}
+.k-window.k-dialog .divide.full {
+  margin: 0 -30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .k-window.k-dialog .k-dialog-titlebar {
   font-size: 17px;
@@ -2224,11 +2279,12 @@ td .form-box, th .form-box {
   border-right: none;
 }
 
-.table-bottom {
-  padding: 15px 20px;
-  background: #fff;
-  border-bottom: 1px solid #ccc;
-  box-shadow: 0 -3px 5px 0 rgba(0, 0, 0, 0.1);
+.inner-column .table {
+  border-top: 0;
+}
+.inner-column .table tr:last-child th,
+.inner-column .table tr:last-child td {
+  border-bottom: 0;
 }
 
 .table-box {
@@ -2236,11 +2292,7 @@ td .form-box, th .form-box {
   flex-direction: column;
   padding: 20px;
   background: #fff;
-  border: 1px solid #eee;
-  border-top: 2px solid #2476dd;
-}
-.table-box > [class^=table] + [class^=table] {
-  margin-top: 10px;
+  border: 1px solid #e4e4e4;
 }
 .table-box.has-bar {
   padding: 20px;
@@ -2249,6 +2301,12 @@ td .form-box, th .form-box {
 }
 .table-box.has-bar .sub-title {
   color: #2476dd;
+}
+.table-box .btn-box.bottom:only-child {
+  margin-top: -10px;
+}
+.table-box + .table-box {
+  border-top: 0;
 }
 
 .table-footer {
@@ -2267,6 +2325,7 @@ td .form-box, th .form-box {
 */
 .table th, .table td {
   color: #222;
+  padding: 6px 10px;
 }
 .table th {
   font-size: 14px;
@@ -2280,7 +2339,22 @@ td .form-box, th .form-box {
   line-height: 18px;
   letter-spacing: -1.05px;
   height: 42px;
-  padding: 6px 10px;
+}
+
+.table-box {
+  border: 1px solid #eee;
+  border-top: 2px solid #2476dd;
+}
+.table-box > [class^=table] + [class^=table] {
+  margin-top: 10px;
+}
+.table-box.has-bar {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-left: 1px solid #333;
+}
+.table-box.has-bar .sub-title {
+  color: #2476dd;
 }
 
 /*
@@ -2291,6 +2365,9 @@ td .form-box, th .form-box {
 .form-group {
   display: flex;
   align-items: center;
+}
+.form-group > * + * {
+  margin-left: 8px;
 }
 .form-group.col {
   flex-direction: column;
@@ -2316,6 +2393,7 @@ td .form-box, th .form-box {
   letter-spacing: -0.7px;
   color: #555;
   white-space: nowrap;
+  font-weight: 400;
 }
 
 td .form-group.col > * + * {
@@ -2330,6 +2408,9 @@ td .form-group.col > * + * {
 .form-set > *:not(.bar) + *:not(.bar) {
   margin-left: 8px;
 }
+.form-set.xl {
+  width: 830px;
+}
 .form-set .h-checkbox.no-label {
   margin: 0;
 }
@@ -2339,6 +2420,7 @@ td .form-group.col > * + * {
   letter-spacing: -0.7px;
   color: #555;
   white-space: nowrap;
+  font-weight: 400;
 }
 .form-set .bar {
   margin: 0 2px;
@@ -2551,6 +2633,10 @@ td .form-group.col > * + * {
   max-width: 230px;
   min-width: 230px;
 }
+.h-input.lg-2, .k-input.lg-2 {
+  max-width: 255px;
+  min-width: 255px;
+}
 .h-input.xl, .k-input.xl {
   max-width: 400px;
   min-width: 400px;
@@ -2669,6 +2755,10 @@ td .form-group.col > * + * {
   font-weight: 400;
 }
 
+.h-input.xs, .k-input.xs {
+  max-width: 50px;
+  min-width: 50px;
+}
 .h-input.sm, .k-input.sm {
   max-width: 106px;
   min-width: 106px;
@@ -2682,6 +2772,13 @@ td .form-group.col > * + * {
 * input - common
 * ------------------------------
 */
+.form-set .form-label {
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -1.05px;
+  font-weight: bold;
+}
+
 .input-set.col {
   align-items: flex-start;
 }
@@ -3147,6 +3244,10 @@ td .form-group.col > * + * {
 .btn-box {
   display: flex;
   justify-content: center;
+}
+.btn-box.bottom {
+  justify-content: flex-end;
+  margin-top: 10px;
 }
 .btn-box.bottom .k-button, .btn-box.bottom .h-btn {
   height: 32px;
@@ -4197,6 +4298,70 @@ th .required {
 
 /*
 * ------------------------------
+* file upload
+* ------------------------------
+*/
+.k-upload {
+  display: flex;
+  height: 28px;
+  background: #fff;
+}
+.k-upload .k-dropzone {
+  order: 1;
+}
+.k-upload .k-upload-files {
+  display: flex;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.k-upload .k-upload-files .k-file-name-size-wrapper {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+}
+.k-upload .k-upload-button {
+  position: relative;
+  flex: 0 0 auto;
+  background-color: #fff;
+  border: 1px solid #aaa;
+  color: #222;
+  width: auto;
+}
+.k-upload .k-upload-button input {
+  font: 170px monospace !important;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+.k-upload .k-upload-files .k-file-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+}
+.k-upload .k-upload-files .k-upload-action {
+  padding: 0;
+  background-color: #fff;
+  border: 1px solid transparent;
+}
+.k-upload .k-upload-files .k-upload-action .k-i-close {
+  width: 12px;
+  height: 12px;
+  background-image: url("../images_bp/icon/btn_X.svg");
+  background-size: 12px 12px;
+}
+.k-upload .k-file-validation-message, .k-upload .k-file-group-wrapper {
+  display: none;
+}
+
+/*
+* ------------------------------
 * tab
 * ------------------------------
 */
@@ -4257,6 +4422,45 @@ th .required {
   font-weight: bold;
 }
 
+.tab-control.border .k-tabstrip-items {
+  height: 40px;
+  border: none;
+  color: #555;
+}
+.tab-control.border .k-tabstrip-items .k-item {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  margin-right: 0;
+  border: 1px solid #ccc;
+  border-right: 0;
+}
+.tab-control.border .k-tabstrip-items .k-item:last-child {
+  border-right: 1px solid #ccc;
+}
+.tab-control.border .k-tabstrip-items .k-link {
+  padding-bottom: 0;
+  font-weight: 400;
+}
+.tab-control.border .k-tabstrip-items .k-item.k-state-active,
+.tab-control.border .k-tabstrip-items .k-item.k-state-selected {
+  border-color: #0e4194;
+  color: #0e4194;
+  font-weight: bold;
+}
+.tab-control.border .k-tabstrip-items .k-item.k-state-active + .k-item,
+.tab-control.border .k-tabstrip-items .k-item.k-state-selected + .k-item {
+  border-left: 1px solid #0e4194;
+}
+.tab-control.border .k-tabstrip-items .k-item.k-state-disabled {
+  background: #f5f5f5;
+}
+
 /*
 * ------------------------------
 * tooltip
@@ -4305,6 +4509,10 @@ th .required {
 .k-datepicker.sm {
   max-width: 120px;
   min-width: 120px;
+}
+.k-datepicker.md {
+  max-width: 166px;
+  min-width: 166px;
 }
 .k-datepicker .k-picker-wrap {
   display: flex;
@@ -4738,8 +4946,20 @@ th .required {
 * ------------------------------
 */
 .table-content.grid {
+  position: relative;
+  height: 100%;
   background: #fff;
   border-bottom: 1px solid #aaa;
+}
+.table-content.grid.has-bottom {
+  padding-bottom: 58px;
+}
+
+.table-bottom {
+  padding: 15px 20px;
+  background: #fff;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 -3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 .k-grid {
@@ -5101,11 +5321,13 @@ th .required {
   border: 0;
   padding: 0;
   height: 100%;
+  line-height: 20px;
 }
 .k-textarea ::-moz-placeholder {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  line-height: 20px;
   color: #aaa;
   font-weight: 400;
 }
@@ -5113,6 +5335,7 @@ th .required {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  line-height: 20px;
   color: #aaa;
   font-weight: 400;
 }
@@ -5120,6 +5343,7 @@ th .required {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  line-height: 20px;
   color: #aaa;
   font-weight: 400;
 }
