--- a/resources/css/scss/_global_bp.scss
+++ b/resources/css/scss/_global_bp.scss
@@ -11,7 +11,9 @@
 // Common
 
 
-
+.ml-10 {
+    margin-left: 10px !important;
+}
 /*
 * ------------------------------
 * Title
@@ -59,6 +61,9 @@
             line-height: 18px;
         }
     }
+    &.xsm { //팝업일 경우
+		margin: 12px 0 6px;
+	}
     &.md {
         min-height: unset;
         height: 23px;
