--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -8,6 +8,66 @@
 }
 /*
 * ------------------------------
+* file upload
+* ------------------------------
+*/
+.k-upload {
+	display: flex;
+	height: 28px;
+	background: $white;
+	.k-dropzone {
+		order: 1;
+	}
+	.k-upload-files { //파일 박스
+		display: flex;
+		padding: 0 10px;
+		border: 1px solid $gray-c;
+		border-radius: 3px;
+		.k-file-name-size-wrapper {
+			@include font-size-sm
+		}
+	}
+	
+	.k-upload-button {
+		position: relative;
+		flex: 0 0 auto;
+		background-color: $white;
+		border: 1px solid $gray-a;
+		color: $gray-2;
+		width: auto;
+	}
+	.k-upload-button input { //기본스타일 삭제
+		font: 170px monospace!important;
+		margin: 0;
+		padding: 0;
+		opacity: 0;
+		cursor: pointer;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		z-index: 1;
+	}
+	.k-upload-files .k-file-name { // 파일명
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		position: relative;
+	}
+	.k-upload-files .k-upload-action {
+		padding: 0;
+		background-color: $white;
+		border: 1px solid transparent;
+		.k-i-close {
+			@include iconSvg($width: 12px, $height: 12px, $name: 'btn_X', $size: 12px 12px );
+		}
+
+	}
+	.k-file-validation-message, .k-file-group-wrapper {
+		display: none;
+	}
+}
+/*
+* ------------------------------
 * tab
 * ------------------------------
 */
@@ -65,6 +125,44 @@
 		font-weight: bold;
 	}
 }
+.tab-control.border {
+	.k-tabstrip-items {
+		height: 40px;
+		// border: 1px solid $gray-c;
+		border: none;
+		color: $gray-5;
+		.k-item {
+			@include font-size-menu;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			flex: 1;
+			margin-right: 0;
+			border: 1px solid $gray-c;
+			border-right: 0;
+			&:last-child {
+				border-right: 1px solid $gray-c;
+			}
+		}
+		.k-link {
+			padding-bottom: 0;
+			font-weight: 400;
+		}
+		.k-item.k-state-active, 
+		.k-item.k-state-selected {
+			border-color: $main;
+			color: $main;
+			font-weight: bold;
+			+ .k-item {
+				border-left: 1px solid $main;
+			}
+		}
+		.k-item.k-state-disabled {
+			background: $gray-f5;
+		}
+	}
+}
 
 /*
 * ------------------------------
@@ -112,7 +210,11 @@
 		max-width: 120px;
 		min-width: 120px;
 	}
-
+	&.md {
+		max-width: 166px;
+		min-width: 166px;
+	}
+ 
 	.k-picker-wrap {
 		display: flex;
 		width: 100%;
@@ -586,8 +688,20 @@
 * ------------------------------
 */
 .table-content.grid {
+	position: relative; 
+    height: 100%;
 	background: $white;
 	border-bottom: 1px solid $gray-a;
+	&.has-bottom {
+		padding-bottom: 58px;
+	}
+}
+.table-bottom {
+    padding: 15px 20px;
+    background: $white;
+    // border-top: 1px solid $inputDefault;
+    border-bottom: 1px solid $inputDefault;
+    box-shadow: 0 -3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 //껍데기
 .k-grid {
@@ -944,9 +1058,11 @@
 		border: 0;
 		padding: 0;
 		height: 100%;
+		line-height: 20px;
 	}
 	::placeholder {
 		@include font-size-sm;
+		line-height: 20px;
 		color: $gray-a;
 		font-weight: 400;
 	}
