--- a/resources/css/scss/modules/_input.scss
+++ b/resources/css/scss/modules/_input.scss
@@ -65,6 +65,10 @@
 		max-width: 230px;
 		min-width: 230px;
 	}
+	&.lg-2 {
+		max-width: 255px;
+		min-width: 255px;
+	}
 	&.xl {
 		max-width: 400px;
 		min-width: 400px;
