--- a/resources/css/scss/modules/_popup.scss
+++ b/resources/css/scss/modules/_popup.scss
@@ -134,6 +134,9 @@
     padding: 20px 30px;
     border-top: 1px solid #e5e5e5;
     text-align: right;
+    .btn-box {
+        margin-top: 0; //bp
+    }
 }
 
 /*
@@ -142,6 +145,33 @@
 * ------------------------------
 */
 .k-dialog .k-dialog-content {
+    &.alert {
+        width: 320px;
+        text-align: center;
+        .content-group {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 40px 30px 30px;
+        }
+        .btn-box {
+            margin-top: 30px;
+        }
+        .btn-box .k-button {
+            height: 32px;
+        }
+        .main-text {
+            @include font-size-sm;
+            line-height: 23px;
+        }
+        .point {
+            color: $main;
+            font-weight: bold;
+        }
+    }
+    &.xs {
+        width: 320px;
+    }
     &.sm {
         width: 480px;
     }
@@ -165,7 +195,11 @@
     -webkit-tap-highlight-color: transparent;
     border: 1px solid $gray-5;
     overflow: hidden;
-    
+    .divide.full {
+        margin: 0 -30px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
     .k-dialog-titlebar {
         @include font-size-lg;
         display: flex;
