<그리드> - sortable: true 옵션적용 - resizable 스타일 적용 - 내용없음 스타일 적용 - Locked: true 스타일 적용 - “NO” 컬럼 센터 정렬 및 sortable: false 적용 <페이지> 계약 > 고객담보관리 계약 > 본/지사관리

--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -279,6 +279,9 @@ td .divide {
 * Title Group
 * ------------------------------
 */
+.contents-header {
+	margin-bottom: 20px;
+}
 .title-box {
 	display: flex;
 	align-items: center;
@@ -293,7 +296,7 @@ td .divide {
 	}
 	&.lg {
 		height: 32px;
-		margin: 0 0 20px;
+		// margin: 0 0 20px;
 	}
 	&.md {
 		min-height: 28px;
