--- a/resources/css/scss/index.scss
+++ b/resources/css/scss/index.scss
@@ -66,7 +66,7 @@
     flex: 1; 
 }
 .table-bottom {
-    display: flex;
+    // display: flex;
     position: absolute;
     left: 0;
     bottom: 0;
