--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -753,21 +753,46 @@
 .tab-control.border {
 	.k-tabstrip-items {
 		height: 40px;
-		// border: 1px solid $gray-c;
-		border: none;
+		border-left: 1px solid $gray-e4;
+		// border-right: 1px solid $gray-e4;
+		border-bottom: none;
+		// border: none;
 		color: $gray-5;
+		z-index: 1;
+		overflow: hidden;
 		.k-item {
 			@include font-size-menu;
+			position: relative;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			flex-direction: column;
-			flex: 1;
+			background-color: $gray-ef;
+			// flex: 1;
+			padding: 0 50px;
 			margin-right: 0;
-			border: 1px solid $gray-c;
-			border-right: 0;
+			border-top: 1px solid $gray-e4;
+			border-left: 1px solid transparent;
+			border-right: 1px solid transparent;
+			border-bottom: none;
 			&:last-child {
-				border-right: 1px solid $gray-c;
+				border-right: 1px solid $gray-e4;
+				&::after {
+					display: none;
+				}
+			}
+			&:first-child {
+				// border-left: 1px solid $gray-e4;
+			}
+			&::after {
+				content: '';
+				position: absolute;
+				top: 10px;
+				right: -2px;
+				width: 1px;
+				height: 20px; 
+				background-color: $gray-e4;
+				z-index: 1;
 			}
 		}
 		.k-link {
@@ -776,16 +801,32 @@
 		}
 		.k-item.k-state-active, 
 		.k-item.k-state-selected {
-			border-color: $main;
+			background: $white;
+			border-top: 1px solid $main;
+			// border-left: 1px solid $gray-e4;
+			
 			color: $main;
 			font-weight: bold;
 			+ .k-item {
-				border-left: 1px solid $main;
+				border-left: 1px solid $gray-e4;
+			}
+		}
+		.k-item {
+			+ .k-item.k-state-active, 
+			+ .k-item.k-state-selected {
+				border-left: 1px solid $gray-e4;
 			}
 		}
 		.k-item.k-state-disabled {
-			background: $gray-f5;
+			// background: $gray-f5;
+			color: $gray-a;
 		}
+	}
+	.tabpanel {
+		margin-top: -1px;
+		padding: 20px;
+		background-color: $white;
+		border: 1px solid $gray-e4;
 	}
 }
 
@@ -826,6 +867,7 @@
     display: inline-flex;
 	width: 100%;
 	height: 28px;
+	background: $white;
 
     white-space: nowrap;
     vertical-align: middle;
